services/nginx/grow-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.io/ingress.class: "nginx"
    # cert-manager.io/issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-passthrough: 'true'
spec:
  # tls:
  #   - hosts:
  #     - 6ab9-14-187-105-14.ap.ngrok.io
  #     secretName: 6ab9-14-187-105-14.ap.ngrok.io
  rules:
    # - host: tonne.com
    #   http:
    #     paths:
    #       - path: /?(.*)
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: fastapi
    #             port:
    #               number: 1234
    #       - path: /web?(.*)
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: web
    #             port:
    #               number: 8080
    # - host: grafana.tonne.com
    #   http:
    #     paths:
    #       - path: /?(.*)
    #         pathType: Prefix
    #         backend:
    #           service: 
    #             name: my-argo-cd-server
    #             port:
    #               number: 80
    # - host: redis.tonne.com
    #   http:
    #     paths:
    #       - path: /?(.*)
    #         pathType: Prefix
    #         backend:
    #           service: 
    #             name: my-redis-master
    #             port:
    #               number: 6379
    #
    # - host: airflow.tonne.com
    #   http:
    #     paths:
    #       - path: /?(.*)
    #         pathType: Prefix
    #         backend:
    #           service: 
    #             name: grow-airflow-webserver
    #             port:
    #               number: 8080
    #
    # - host: k8s.tonne.com
    #   http:
    #     paths:
    #       - path: /?(.*)
    #         pathType: Prefix
    #         backend:
    #           service: 
    #             name: my-jupyterhub-hub
    #             port:
    #               number: 8081

    # - host: argo.tonne.com
    #   http:
    #     paths:
    #       - path: /?(.*)
    #         pathType: Prefix
    #         backend:
    #           service: 
    #             name: my-argo-cd-server
    #             port:
    #               name: http
    - host: jenkins.tonne.com
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service: 
                name: my-jenkins
                port:
                  number: 8080
